// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/avatar/demo/Badge1.js correctly test 1`] = `
<span>
  <span
    class="jc-badge"
  >
    <span
      class="jc-avatar jc-avatar-square jc-avatar-icon"
    >
      <i
        class="jcicon jcicon-user "
      />
    </span>
    <sup
      class="jc-scroll-number jc-badge-dot"
      data-show="true"
    />
  </span>
</span>
`;

exports[`renders ./components/avatar/demo/Basic.js correctly test 1`] = `
<div>
  <div>
    <span
      class="jc-avatar jc-avatar-lg jc-avatar-circle jc-avatar-icon"
    >
      <i
        class="jcicon jcicon-user "
      />
    </span>
    <span
      class="jc-avatar jc-avatar-circle jc-avatar-icon"
    >
      <i
        class="jcicon jcicon-user "
      />
    </span>
    <span
      class="jc-avatar jc-avatar-sm jc-avatar-circle jc-avatar-icon"
    >
      <i
        class="jcicon jcicon-user "
      />
    </span>
  </div>
  <div>
    <span
      class="jc-avatar jc-avatar-lg jc-avatar-square jc-avatar-icon"
    >
      <i
        class="jcicon jcicon-user "
      />
    </span>
    <span
      class="jc-avatar jc-avatar-square jc-avatar-icon"
    >
      <i
        class="jcicon jcicon-user "
      />
    </span>
    <span
      class="jc-avatar jc-avatar-sm jc-avatar-square jc-avatar-icon"
    >
      <i
        class="jcicon jcicon-user "
      />
    </span>
  </div>
</div>
`;

exports[`renders ./components/avatar/demo/Dynamic.js correctly test 1`] = `
<div>
  <span
    class="jc-avatar jc-avatar-lg jc-avatar-circle"
    style="background-color:#f56a00;vertical-align:middle"
  >
    <span
      class="jc-avatar-string"
    >
      U
    </span>
  </span>
  <button
    class="jc-btn jc-btn-sm"
    style="margin-left:16px;vertical-align:middle"
    type="button"
  >
    <span>
      Change
    </span>
  </button>
</div>
`;

exports[`renders ./components/avatar/demo/Type.js correctly test 1`] = `
<div>
  <span
    class="jc-avatar jc-avatar-circle jc-avatar-icon"
  >
    <i
      class="jcicon jcicon-user "
    />
  </span>
  <span
    class="jc-avatar jc-avatar-circle"
  >
    <span
      class="jc-avatar-string"
    >
      U
    </span>
  </span>
  <span
    class="jc-avatar jc-avatar-circle"
  >
    <span
      class="jc-avatar-string"
    >
      USER
    </span>
  </span>
  <span
    class="jc-avatar jc-avatar-circle jc-avatar-image"
  >
    <img
      alt=""
      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
    />
  </span>
  <span
    class="jc-avatar jc-avatar-circle"
    style="color:#f56a00;background-color:#fde3cf"
  >
    <span
      class="jc-avatar-string"
    >
      U
    </span>
  </span>
  <span
    class="jc-avatar jc-avatar-circle jc-avatar-icon"
    style="background-color:#87d068"
  >
    <i
      class="jcicon jcicon-user "
    />
  </span>
</div>
`;
